--- a/index.html
+++ b/index.html
@@ -15,49 +15,51 @@
 </head>
 
 <body>
-    <div class="container">
+    <main class="container">
+        <header>
         <h1>YAY! It's BOGO</h1>
-        <section class="topBox">
-            <div class="box ">
-                <input type="radio" id="unit1" name="offer" />
-                <div class="unit-box">
-                    <p class="primary-text">1 Unit <span class="tag">10% Off</span></p>
-                    <p class="secondary-text">Standard Price</p>
-                </div>
-                <div class="amount-box">
-                    <p class="primary-amount">$10.00 USD</p>
-                    <p class="secondary-amount">$24.00 USD</p>
-                </div>
+       </header>
+       <section class="topBox">
+        <div class="box ">
+            <input type="radio" id="unit3" name="offer" />
+            <div class="unit-box">
+                <p class="primary-text">1 Unit <span class="tag">10% Off</span></p>
+                <p class="secondary-text">Standard Price</p>
             </div>
-            <div class="inner-box">
-                <div class="options-container">
-                    <div class="options">
-                        <p class="secondary-text size">Size</p>
-                        <div>
-                            <span class="number">#1</span>
-                            <select class="option">
-                                <option>S</option>
-                            </select>
-                        </div>
-                        <div>
-                            <span class="number">#2</span>
-                            <select class="option">
-                                <option>S</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="options">
-                        <p class="secondary-text">Colour</p>
+            <div class="amount-box">
+                <p class="primary-amount">$10.00 USD</p>
+                <p class="secondary-amount">$24.00 USD</p>
+            </div>
+        </div>
+        <div class="inner-box">
+            <div class="options-container">
+                <div class="options">
+                    <p class="secondary-text size">Size</p>
+                    <div>
+                        <span class="number">#1</span>
                         <select class="option">
-                            <option>Black</option>
+                            <option>S</option>
                         </select>
+                    </div>
+                    <div>
+                        <span class="number">#2</span>
                         <select class="option">
-                            <option>Colour</option>
+                            <option>S</option>
                         </select>
                     </div>
                 </div>
+                <div class="options">
+                    <p class="secondary-text">Colour</p>
+                    <select class="option">
+                        <option>Black</option>
+                    </select>
+                    <select class="option">
+                        <option>Colour</option>
+                    </select>
+                </div>
             </div>
-        </section>
+        </div>
+    </section>
         <section class="topBox">
             <div class="ribbon"><span>Most Popular</span></div>
             <div class="box ">
@@ -145,7 +147,7 @@
         </div>
         <button>+ Add to Cart</button>
         <span class="powered-by">@ Powered by Pumper</span>
-    </div>
+    </main>
     <script src="./index.js">
     </script>
 </body>
