--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <title>Interactive Boxes</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <style>
 
     </style>
@@ -21,7 +22,7 @@
        </header>
        <section class="topBox">
         <div class="box ">
-            <input type="radio" id="unit3" name="offer" />
+            <input type="radio" name="offer" />
             <div class="unit-box">
                 <p class="primary-text">1 Unit <span class="tag">10% Off</span></p>
                 <p class="secondary-text">Standard Price</p>
@@ -63,7 +64,7 @@
         <section class="topBox">
             <div class="ribbon"><span>Most Popular</span></div>
             <div class="box ">
-                <input type="radio" id="unit2" name="offer" />
+                <input type="radio" name="offer" />
                 <div class="unit-box">
                     <p class="primary-text">2 Unit <span class="tag">20% Off</span></p>
                 </div>
@@ -103,7 +104,7 @@
         </section>
         <section class="topBox">
             <div class="box ">
-                <input type="radio" id="unit3" name="offer" />
+                <input type="radio" name="offer" />
                 <div class="unit-box">
                     <p class="primary-text">3 Unit <span class="tag">30% Off</span></p>
                 </div>
